--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-native": "^0.67.6",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
